added faker package to development libraries for mocking up content

--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
         "files": [
             "helpers.php"
         ]
+    },
+    "require-dev": {
+        "fzaninotto/faker": "^1.6"
     }
 }
