--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,9 @@
         "files": [
             "helpers.php"
         ]
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.3",
+        "mockery/mockery": "^0.9.9"
     }
 }
