--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,9 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
+        "php": ">=7.0.0 || >=8.0",
         "nesbot/carbon": "^1.22",
-        "danielstjules/stringy": "^3.0",
-        "fzaninotto/faker": "^1.7"
+        "danielstjules/stringy": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -24,7 +23,8 @@
         ]
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.3",
-        "mockery/mockery": "^0.9.9"
+        "phpunit/phpunit": "^9.0",
+        "mockery/mockery": "^0.9.9",
+        "fakerphp/faker": "^1.20"
     }
 }
